--- a/exercício_css;.html
+++ b/exercício_css;.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h2>palpites</h2>
             <article>
-                <img src="template_onde_assistir_-_sportbuzz_yOj8AIy_widelg.png" alt="realxatetico">
+                <img src="joselu-vitoria-real-madrid-e1706832699618.webp" alt="realxatetico">
                 <header>
                     <time class="creation-date"> 04/02/2024 às 17:35</time>
                 </header>
